--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: emridul/nginx-todo:1.1
+    image: emridul/nginx-todo:1.2
     ports:
-    - '8080:80'
+      - '8080:80'
+    volumes:
+      - .:/code
