updated volume path to point to src code at host

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: emridul/nginx-todo:1.2
+    image: emridul/nginx-todo:1.2.2
     ports:
       - '8080:80'
     volumes:
-      - .:/code
+      - .:/usr/share/nginx/html
